# compiler

./: CMakeLists.txt  build_and_run  implementation_specific_stuf.txt
scripts/: build_all  run_tests
src/: main.c
src/lexer/: lexer.c  lexer.h  token.h
src/util/generic/: variant.c  variant.h  vector.c  vector.h
tests/: minunit.h  testall.c
tests/generic/: variant_tests.h  vector_tests.h
